--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,18 @@
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>mashru.busmanagement.BusManagement</exec.mainClass>
     </properties>
+    
+    <dependencies>
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.7.1</version>
+    </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE190</version>
+        </dependency>
+    </dependencies>
+
 </project>
